output/facebook/rocksdb/1493.txt
This didn't occur with 3.8.

clang-3.9 is from
<pre>
deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-3.9 main
apt-get install clang-3.9
</pre>

Build:
<pre>
${CC} --version
+ clang-3.9 --version
clang version 3.9.1-svn281634-1~exp1 (branches/release_39)
Target: x86_64-pc-linux-gnu
Thread model: posix
InstalledDir: /usr/bin
${CXX} --version
+ clang++-3.9 --version
clang version 3.9.1-svn281634-1~exp1 (branches/release_39)
Target: x86_64-pc-linux-gnu
Thread model: posix
InstalledDir: /usr/bin
${AR:-ar} --version
+ ar --version
GNU ar (GNU Binutils for Ubuntu) 2.26.1
Copyright (C) 2015 Free Software Foundation, Inc.
This program is free software; you may redistribute it under the terms of
the GNU General Public License version 3 or (at your option) any later version.
This program has absolutely no warranty.

sed -i -e '1s/^/SHELL=\/bin\/bash/' Makefile
+ sed -i -e '1s/^/SHELL=\/bin\/bash/' Makefile

make -j"${CPUS}" --output-sync=target V=1 "${BUILD_TYPE}"
+ make -j24 --output-sync=target V=1 check
Makefile:101: Warning: Compiling in debug mode. Don't use the resulting binary in production
In file included from utilities/column_aware_encoding_exp.cc:22:
In file included from ./table/format.h:19:
In file included from ./table/persistent_cache_helper.h:10:
In file included from ./util/statistics.h:17:
./util/thread_local.h:205:5: error: macro expansion producing 'defined' has undefined behavior [-Werror,-Wexpansion-to-defined]
#if ROCKSDB_SUPPORT_THREAD_LOCAL
    ^
./util/thread_local.h:22:4: note: expanded from macro 'ROCKSDB_SUPPORT_THREAD_LOCAL'
  !defined(OS_WIN) && !defined(OS_MACOSX) && !defined(IOS_CROSS_COMPILE)
   ^
./util/thread_local.h:205:5: error: macro expansion producing 'defined' has undefined behavior [-Werror,-Wexpansion-to-defined]
./util/thread_local.h:22:24: note: expanded from macro 'ROCKSDB_SUPPORT_THREAD_LOCAL'
  !defined(OS_WIN) && !defined(OS_MACOSX) && !defined(IOS_CROSS_COMPILE)
                       ^
./util/thread_local.h:205:5: error: macro expansion producing 'defined' has undefined behavior [-Werror,-Wexpansion-to-defined]
./util/thread_local.h:22:47: note: expanded from macro 'ROCKSDB_SUPPORT_THREAD_LOCAL'
  !defined(OS_WIN) && !defined(OS_MACOSX) && !defined(IOS_CROSS_COMPILE)
                                              ^
3 errors generated.
</pre>
